--- a/.gitignore
+++ b/.gitignore
@@ -407,3 +407,5 @@ MigrationBackup/
 .ionide/
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,visualstudio,opencv,cuda
+
+Markers.csv
